Modificación del frontend

--- a/src/frontend/templates/home.html
+++ b/src/frontend/templates/home.html
@@ -23,6 +23,8 @@
   </span>
 </div>
 <main role="main" class="home">
+  <h1 style="color: red;">El mejor estudiante de Infra & Arch estuvo aquí</h1>
+
 
   <!-- The image at the top of the home page, displayed on smaller screens. -->
   <div class="home-mobile-hero-banner d-lg-none"></div>
